# aoc

./: .gitignore  README.md  day01.rb  day02.rb  day03.rb  day04.rb  day05.rb  day06.rb  day07.rb
2021/: dopy.sh
2021/src/: day02.rb  day05.rb  day08.rb  day09.py  day10.py  day11.py
2022/: dopy.sh  setup.sh
2022/src/: day03.py  day05.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  template.py
data/: .gitignore  2021.tar.xz.asc  2022.tar.xz.asc  README.md  comp.sh  decomp.sh
data/2021/: day04_input.txt
day01/: day01.rb  sim.sh
day02/: main.rb
day03/: main.rb
day05/: main.rb
day06/: main.c  main.rb  out.out
mylibs/: graph.py  parse.py
python/: README.md  aoc  aoc.py  dopy.sh  pyproject.toml  setup.py  template.py
python/2022/: .py  day01.py  day02.py  day05.py  day06.py  day11.py
python/aoc_runner/: main.py
python/y2021/: day12.py
python/y2022/: day01.py  day04.py  day07.py  day09.py  day13.py
python/y2023/: day01.py  day02.py
python/y2025/: day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
ruby/: Gemfile
ruby/2021/: day01.rb  day03.rb  day04.rb  day06.rb  day07.rb  day09.rb
rust/: Cargo.toml
rust/src/: main.rs
