[tool.poetry]
name = "aoc_runner"
version = "0.1.0"
description = ""
authors = ["TomohiroKida <tomo426.sakura1281m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.11.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
main = "aoc_runner.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
